--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Test File</title>
 </head>
 <body>
-    hello world!
+    <div style="color: chartreuse;">
+        hello world! v2
+    </div>
 </body>
 </html>
