--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div style="color: chartreuse;">
         hello world! v2
+        <img src="monster.png">
     </div>
 </body>
 </html>
