--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Test File</title>
 </head>
 <body>
-    <div style="color: chartreuse;">
+    <div style="color: rgb(24, 35, 153);">
         hello world! v2
         <img src="monster.png">
     </div>
